# Control-Trip-Prediction

./: .gitignore  Makefile  README.md  config.yml  dvc.yaml  pyproject.toml
.dvc/: config
scripts/: check_na.py  get_data.py  train.py
src/: config.py  config.yml  io.py  paths.py  plot.py  preprocess.py  trainer.py  utils.py
src/queries/: bqml_arima.sql  bqml_tree.sql  data.sql
